# DimooRun

./: .env.e2e  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SPEC.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
compose-diagnostics/: compose-evidence-index.txt
docs/: ARCHITECTURE.md  BROWSER_SMOKE_REPORT.md  COMPARISONS.md  COMPOSE_SMOKE_REPORT.md  CONCEPTS.md  CONSOLE_EXPERIENCE_ACCEPTANCE.md  CONSOLE_USER_TASK_MODEL.md  CURRENT_MATURITY.md  DEMO_SCRIPT.md  DESIGN_SPEC.md  FAQ.md  GETTING_STARTED.md  IMPLEMENTATION_UPDATE_2026-06-01.md  OPERATIONS_RUNBOOK.md  PRODUCTION_GRADE_GAP_CLOSURE_PLAN_2026-06-04.md  PRODUCTION_READINESS_SCORECARD.md  PRODUCT_FUNCTION_COVERAGE_REVIEW.md  PRODUCT_OPTIMIZATION_BACKLOG.md  PRODUCT_OVERVIEW.md  PRODUCT_WORKFLOW_COVERAGE_MATRIX.md  QUICKSTART.md  README.md  ROADMAP.md  SCREENSHOTS.md  THREAT_MODEL.md  TRUST_AND_SECURITY.md
execution_plans/: 00-master-execution-plan.md  01-project-foundation.md  02-domain-persistence-and-api.md  03-agent-package-and-adapters.md  04-runtime-task-worker-streaming.md  05-deployment-runtime-control.md  06-governance-security-and-model-gateway.md  07-observability-replay-and-quality.md  08-console-product-plan.md  09-sdk-cli-compatibility-and-migration.md  10-enterprise-ops-and-cloud-native.md  10-production-foundation-and-console-wiring.md  11-runtime-production-hardening.md  12-enterprise-ops-and-cloud-native.md
migrations/: __init__.py  env.py  table_helpers.py
(+597 files in other folders)
