[project]
name = "dimoorun"
version = "0.1.0"
description = "Adapter-first enterprise runtime platform for AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21,<1.0",
    "alembic>=1.17,<2.0",
    "fastapi>=0.116,<1.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.15,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=1.0,<2.0",
    "ruff>=0.12,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["apps/server"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
